// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqlmodules provide autocrud makes use of AutoCrud 1`] = `
Array [
  Object {
    "id": 100,
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 2`] = `
Array [
  Object {
    "id": 1,
    "name": "planes",
  },
  Object {
    "id": 2,
    "name": "trains",
  },
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 3`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 4`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 5`] = `
Array [
  Object {
    "id": 100,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 6`] = `
Array [
  Object {
    "id": 100,
    "name": "grand",
  },
]
`;

exports[`sqlmodules provide autocrud makes use of AutoCrud 7`] = `
Array [
  Object {
    "id": 100,
    "name": "grand",
  },
]
`;
